# CG_Labs

./: .gitignore  LICENSE  README.md
Lab1/: Lab1.sln  README.md
Lab1/ImageConvertor/: CMakeLists.txt
Lab1/ImageConvertor/include/: ImageReader.hpp  ImageWriter.hpp  Material.hpp  Material_PPM.hpp  Pixel.hpp  Vector_i2.hpp
Lab1/ImageConvertor/source/: ImageReader.cpp  ImageWriter.cpp  Material.cpp  Pixel.cpp
Lab1/Lab1.ConsoleApp/: Lab1.ConsoleApp.csproj  Program.cs
Lab1/Lab1.RayTracer/: Array.cs  CGMath.cs  Class1.cs  Lab1.RayTracer.csproj  Quaternion.cs  Ray.cs  Scene.cs  Vector3F.cs  Vector3f.cs
Lab1/Lab1.RayTracer.Tests/: DiskTests.cs  Lab1.RayTracer.Tests.csproj  PlaneTests.cs  SceneTests.cs  SphereTests.cs  ThreeObjectsTests.cs  UnitTest1.cs
Lab1/Lab1.RayTracer/OBJHelper/: OBJHelper.cs
Lab1/Lab1.RayTracer/SceneObjects/: ABaseSceneObject.cs  BaseSceneObject.cs  Camera.cs  DirectionLight.cs  Disk.cs  ISceneObject.cs  Plane.cs  Rectangle.cs  Sphere.cs
Lab1/Lab2.ImageConverter/: ILibraryLoader.cs  ImageReader.cs  ImageWriter.cs  Lab2.ImageConverter.csproj
Lab1/Lab2.ImageConverterCoreWrapper/: ImageWriterWrapper.cpp  ImageWriterWrapper.h  Lab2.ImageConverterCoreWrapper.vcxproj  ManagedObject.h  MaterialWrapper.h
RayTracer/: ImageConverterBuild.bat  RayTracer.sln
RayTracer/Common/: Color.cs  Image.cs
RayTracer/ConsoleApp/: ConsoleApp.csproj  ImageTypes.cs  OutputWriterFactory.cs  Program.cs  ProgramPrinter.cs
RayTracer/ConsoleApp/Abstractions/: IOutputWriter.cs  IOutputWriterFactory.cs
RayTracer/ConsoleApp/OutputPrinters/: ConsoleOutputWriter.cs  ImageOutputWriter.cs
RayTracer/ConsoleApp/Properties/: launchSettings.json
RayTracer/ImageConverter/: CMakeLists.txt
RayTracer/ImageConverter.Common/: Color.cs  IImageReader.cs  IImageWriter.cs  Image.cs  Result.cs
RayTracer/ImageConverter.Core/: ConversionResult.cs  HelperMethods.cs  ImageConverter.cs  PluginManager.cs  ValidationMethods.cs
RayTracer/ImageConverter.Core/Abstractions/: ConversionResult.cs  IImageReader.cs  IImageWriter.cs  IPluginManager.cs
RayTracer/ImageConverter.Reader.BMP/: BmpReader.cs  ImageConverter.Reader.BMP.csproj
RayTracer/ImageConverter.Reader.PPM/: PpmReader.cs
RayTracer/ImageConverter.Writer.BMP/: BmpWriter.cs
RayTracer/ImageConverter.Writer.PPM/: PpmWriter.cs
RayTracer/ImageConverter/include/: IC.hpp  ImageReader.hpp  ImageWriter.hpp  LibHandler.hpp  Material.hpp  Material_BMP.hpp  Pixel.hpp  Vector2i.hpp
RayTracer/ImageConverter/source/: ImageReader.cpp  ImageWriter.cpp  LibHandler.cpp  Material.cpp  Material_BMP.cpp  Material_PPM.cpp  Pixel.cpp  Tests.cpp  Vector2i.cpp  main.cpp
RayTracer/ImageConverterCoreWrapper/: ImageConverterCoreWrapper.vcxproj  ImageConverterCoreWrapper.vcxproj.filters  ImageReaderWrapper.cpp  ImageReaderWrapper.h  ImageWriterWrapper.cpp  ImageWriterWrapper.h  ManagedObject.h  MaterialWrapper.cpp  MaterialWrapper.h
RayTracer/ImageConvertor/: CMakeLists.txt
RayTracer/ImageConvertor/include/: ImageReader.hpp  ImageWriter.hpp  LibHandler.hpp  Material_PPM.hpp
RayTracer/ImageConvertor/source/: ImageReader.cpp  ImageWriter.cpp  LibHandler.cpp  Material_PPM.cpp  Pixel.cpp  (+2 more)
RayTracer/ImageConveter.ConsoleApp/: ImageConveter.ConsoleApp.csproj  Program.cs
RayTracer/RayTracer/: CGMath.cs  Camera.cs  Matrix.cs  Quaternion.cs  Ray.cs  RayTracer.csproj  Renderer.cs  Scene.cs  SceneLoaderFactory.cs  TransformationMatrix3D.cs  Vector3F.cs
RayTracer/RayTracer.Tests/: DiskTests.cs  RayTracer.Tests.csproj  RectangleTests.cs  RendererTests.cs  SceneTests.cs  SphereTests.cs  TriangleTests.cs  Usings.cs
(+24 files in other folders)
